Remove everything related to modules + rough implementation of a type checker

--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,7 @@ dependencies:
 - base >= 4 && < 5
 - megaparsec >= 7 && < 8
 - boxes >= 0 && < 1
+- containers >= 0 && < 1
 
 library:
   source-dirs: src
