Make the executable better, typechecker is still bugged though

--- a/package.yaml
+++ b/package.yaml
@@ -33,6 +33,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - curios
+    - optparse-applicative >= 0 && < 1
 
 tests:
   curios-test:
