Reworked almost the entire project (mostly conversion check)

--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,9 @@ dependencies:
 - containers >= 0 && < 1
 - boxes >= 0 && < 1
 
+default-extensions:
+- NamedFieldPuns
+
 library:
   source-dirs: src
 
