Fix bugs in the parser and typechecker and rename deps folder to src

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,13 +1,13 @@
 .SILENT:
 
-build/index.html: deps/index.html
-	cp deps/index.html build/index.html
+build/index.html: src/index.html
+	cp src/index.html build/index.html
 
-build/memory.o: deps/memory.c
-	clang deps/memory.c -o build/memory.o --target=wasm32 --no-standard-libraries -I include -c -O3
+build/memory.o: src/memory.c
+	clang src/memory.c -o build/memory.o --target=wasm32 --no-standard-libraries -I include -c -O3
 
-build/object.o: deps/object.c
-	clang deps/object.c -o build/object.o --target=wasm32 --no-standard-libraries -I include -c -O3
+build/object.o: src/object.c
+	clang src/object.c -o build/object.o --target=wasm32 --no-standard-libraries -I include -c -O3
 
 build/program.o: program.crs
 	stack exec curios-compiler program.crs build/program.o
