Third time's the charm

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,27 +1,37 @@
 .SILENT:
 
-.PHONY: interpret
+build/memory.o: memory.c
+	clang memory.c \
+		--output=build/memory.o \
+		--target=wasm32 \
+		--no-standard-libraries \
+		--compile \
+		--optimize=3
 
-interpret:
-	stack exec curios-interpreter program.crs
-
-build/index.html: src/index.html
-	cp src/index.html build/index.html
-
-build/memory.o: src/memory.c
-	clang src/memory.c -o build/memory.o --target=wasm32 --no-standard-libraries -I include -c -O3
-
-build/object.o: src/object.c
-	clang src/object.c -o build/object.o --target=wasm32 --no-standard-libraries -I include -c -O3
+build/object.o: object.c
+	clang object.c \
+		--output=build/object.o \
+		--target=wasm32 \
+		--no-standard-libraries \
+		--compile \
+		--optimize=3
 
 build/program.o: program.crs
-	stack exec curios-compiler program.crs build/program.o
+	stack run curios-compiler program.crs build/program.o
 
-build/output.wasm: build/memory.o build/object.o build/program.o
-	wasm-ld build/memory.o build/object.o build/program.o -o build/output.wasm --allow-undefined --entry main -O3
+build/program.wasm: build/memory.o build/object.o build/program.o
+	wasm-ld build/memory.o build/object.o build/program.o \
+		-o build/program.wasm \
+		-O 3
 
-.PHONY: compile
+.PHONY: clean interpret serve
 
-compile: build/index.html build/output.wasm
+clean:
+	git clean -X --force build
+
+interpret: program.crs
+	stack run curios-interpreter program.crs start
+
+serve: build/program.wasm
 	echo "Started server on http://localhost:8080"
 	stack exec curios-server 8080 build
