--- a/package.yaml
+++ b/package.yaml
@@ -16,10 +16,39 @@ description: Please see the README on GitHub at <https://github.com/valmirjunior
 dependencies:
 - base >= 4.7 && < 5
 - mtl >= 2.2 && < 3
-- megaparsec >= 9.0 && < 10
-- boxes >= 0.1 && < 1
-- containers >= 0.6 && < 7
 - bytestring >= 0.10 && < 1
+- megaparsec >= 9.2 && < 10
+- containers >= 0.6 && < 1
+
+# Lens specific dependencies
+- lens >= 5.0 && < 6
+- generic-lens >= 2.2 && < 3
+
+default-extensions:
+- BinaryLiterals
+- LambdaCase
+- ParallelListComp
+- NamedFieldPuns
+- NoFieldSelectors
+- DuplicateRecordFields
+- FlexibleContexts
+- GeneralizedNewtypeDeriving
+
+# Lens specific extensions
+- DeriveGeneric
+- DataKinds
+- TypeApplications
+
+ghc-options:
+- -Wall
+- -Wcompat
+- -Widentities
+- -Wincomplete-record-updates
+- -Wincomplete-uni-patterns
+- -Wmissing-export-lists
+- -Wmissing-home-modules
+- -Wpartial-fields
+- -Wredundant-constraints
 
 library:
   source-dirs: src
@@ -56,14 +85,3 @@ executables:
     - warp >= 3.3 && < 4
     - wai >= 3.2 && < 4
     - wai-app-static >= 3.1 && < 4
-
-tests:
-  curios-test:
-    main: Spec.hs
-    source-dirs: test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - curios
