Use LTS instead of nightly

--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: nightly-2022-10-22
+resolver: lts-20.9
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -30,6 +30,7 @@ resolver: nightly-2022-10-22
 #   - wai
 packages:
 - .
+
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
